crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__ctor_one_arg.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: Some(x)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Ctor {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: "Some",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Var(
                    "x",
                ),
            },
        ],
    },
}
