crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__ctor_qualified.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: "Option::Some(x)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Ctor {
        path: Path {
            segments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: "Option",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: "Some",
                },
            ],
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Var(
                    "x",
                ),
            },
        ],
    },
}
