crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_ctor_empty_args.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: Foo()
---
Ctor(
    Arg(
        Start(
            1,
            5,
        ),
        1,
        5,
    ),
    1,
    1,
)
