crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_ctor_record_field.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: "Rect { 1 }"
---
Ctor(
    Record(
        Field(
            1,
            8,
        ),
        1,
        6,
    ),
    1,
    1,
)
