crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_ctor_unclosed.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: Some(x
---
Ctor(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 5,
            },
            boundary: Position {
                line: 1,
                column: 7,
            },
            unexpected: Position {
                line: 1,
                column: 7,
            },
        },
    ),
    1,
    1,
)
