crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__ctor__tests__error_path_dangling.snap
---
source: crates/alder-parse/src/pattern/ctor.rs
description: "Foo::"
---
PathMember(
    1,
    6,
)
